Back to old styles

--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
-          href="../../../resources/css/add-style.css">
+          href="../../../resources/css/add.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
@@ -61,13 +61,13 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <div class="profile-picture small-profile-picture">
-                <p class="profile-username">Avishi Ganepola</p>
-                <!-- <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p> -->
-                <img width="40px"
+            <!-- <div class="profile-picture small-profile-picture"> -->
+            <p class="profile-username">Avishi Ganepola</p>
+            <!-- <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p> -->
+            <!-- <img width="40px"
                      alt="Anne Hathaway picture"
                      src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- REPEATING -->
