--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
-          href="./style.css">
+          href="./main.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
@@ -62,13 +62,13 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <div class="profile-picture small-profile-picture">
-                <p class="profile-username">Avishi Ganepola</p>
-                <!-- <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p> -->
-                <img width="40px"
+            <!-- <div class="profile-picture small-profile-picture"> -->
+            <p class="profile-username">Avishi Ganepola</p>
+            <!-- <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p> -->
+            <!-- <img width="40px"
                      alt="Anne Hathaway picture"
                      src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
-            </div>
+            </div> -->
         </div>
     </div>
     </div>
@@ -76,102 +76,8 @@
 
     <body>
 
-        <div class="main-container">
 
-            <!-- LEFT-CONTAINER -->
-            <div class="left-container container">
-                <!-- MENU BOX (LEFT-CONTAINER) -->
-                <div class="menu-box block">
-                    <h2 class="titular">MENU BOX</h2>
-                    <ul class="menu-box-menu">
-                        <li>
-                            <a class="menu-box-tab"
-                               href="#6"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages<div
-                                     class="menu-box-number">24</div></a>
-                        </li>
-                        <li>
-                            <a class="menu-box-tab"
-                               href="#8"><span class="icon entypo-paper-plane scnd-font-color"></span>Invites<div
-                                     class="menu-box-number">3</div></a>
-                        </li>
-                        <li>
-                            <a class="menu-box-tab"
-                               href="#10"><span class="icon entypo-calendar scnd-font-color"></span>Events<div
-                                     class="menu-box-number">5</div></a>
-                        </li>
-                        <li>
-                            <a class="menu-box-tab"
-                               href="#12"><span class="icon entypo-cog scnd-font-color"></span>Account Settings</a>
-                        </li>
-                        <li>
-                            <a class="menu-box-tab"
-                               href="#13">
-                                <sapn class="icon entypo-chart-line scnd-font-color"></sapn>Statistics
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
 
-            <!-- MIDDLE-CONTAINER -->
-            <div class="middle-container container">
-                <!-- PROFILE (MIDDLE-CONTAINER) -->
-                <div class="profile block">
-                    <a class="add-button"
-                       href="#28"><span class="icon entypo-plus scnd-font-color"></span></a>
-                    <div class="profile-picture big-profile-picture clear">
-                        <img width="150px"
-                             alt="Anne Hathaway picture"
-                             src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
-                    </div>
-                    <h1 class="user-name">Anne Hathaway</h1>
-                    <div class="profile-description">
-                        <p class="scnd-font-color">Lorem ipsum dolor sit amet consectetuer adipiscing</p>
-                    </div>
-                </div>
-
-                <!-- RIGHT-CONTAINER -->
-                <div class="right-container container">
-                    <div class="menu-box block">
-                        <h2 class="titular">MENU BOX</h2>
-                        <ul class="menu-box-menu">
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#6"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages
-                                    <div class="menu-box-number">24</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#8"><span class="icon entypo-paper-plane scnd-font-color"></span>Invites
-                                    <div class="menu-box-number">3</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#10"><span class="icon entypo-calendar scnd-font-color"></span>Events<div
-                                         class="menu-box-number">5</div></a>
-                            </li>
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#12"><span class="icon entypo-cog scnd-font-color"></span>Account
-                                    Settings</a>
-                            </li>
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#13">
-                                    <sapn class="icon entypo-chart-line scnd-font-color"></sapn>Statistics
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- end right-container -->
-            </div>
-            <!-- end main-container -->
-        </div>
     </body>
-
-</body>
 
 </html>
