--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -19,7 +19,7 @@
           type="image/x-icon"
           href="/resources/icons/favicon.ico">
     <script type="module"
-            src="./script1.js"></script>
+            src="./script.js"></script>
 
 </head>
 
