Add correct paths for dashboard and profile

--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -34,7 +34,7 @@
             <p class="logo"><b class="app-name">NTSF</b></p>
         </div>
         <p class="tagline">National Traffic Spot Fine System</p>
-        <a href="../../../index.html">
+        <a href="../../../dashboard/index.html">
             <button class="main">User Dashboard</button></a>
         <div class="clear"></div>
         <ul class="menu">
@@ -62,7 +62,9 @@
     <div class="dashboard-heading">
         <div class="panel">
             <!-- <div class="profile-picture small-profile-picture"> -->
-            <p class="profile-username">Avishi Ganepola</p>
+            <a href="../../profile/index.html">
+                <p class="profile-username">Avishi Ganepola</p>
+            </a>
             <!-- <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p> -->
             <!-- <img width="40px"
                      alt="Anne Hathaway picture"
