Create basic structure for profile

--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -62,21 +62,56 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <!-- <div class="profile-picture small-profile-picture"> -->
             <p class="profile-username">Avishi Ganepola</p>
-            <!-- <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p> -->
-            <!-- <img width="40px"
-                     alt="Anne Hathaway picture"
-                     src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
-            </div> -->
+
         </div>
     </div>
     </div>
     <!-- REPEATING -->
 
     <body>
+        <div class="scroll">
+            <style>
 
+            </style>
 
+            <div class="divSquare"
+                 id="divSquare1"></div>
+            <div class="divSquare"
+                 id="divSquare2">
+                <h1>User Info</h1>
+                <p>User Id: </p>
+                <p>NIC: </p>
+                <p>Email: </p>
+                <p>Mobile No: </p>
+            </div>
+            <div class="divSquare"
+                 id="divSquare3">
+                <h1>Driver Info</h1>
+                <p>Licence No: </p>
+                <p>Issue Date: </p>
+                <p>Expire Date: </p>
+                <p>Holder's Signature: </p>
+                <p>Vehicle Categories: </p>
+            </div>
+            <div class="divSquare"
+                 id="divSquare4">
+                <h1>Vehicle Info</h1>
+                <p>Register No: </p>
+                <p>Chassis No: </p>
+                <p>Current Owner Name: </p>
+                <p>Current Owner Address: </p>
+                <p>Engine No: </p>
+                <p>Vehicle Class: </p>
+                <p>State When Register: </p>
+                <p>Color: </p>
+                <p>Engine Capacity: </p>
+                <p>Fuel Type: </p>
+                <p>Year of Manufacture: </p>
+                <p>Previous Owners: </p>
+                <p>Current Owner Id: </p>
+            </div>
+        </div>
 
     </body>
 
