--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -70,48 +70,48 @@
     <!-- REPEATING -->
 
     <body>
-        <div class="scroll">
-            <style>
-
-            </style>
-
-            <div class="divSquare"
-                 id="divSquare1"></div>
-            <div class="divSquare"
-                 id="divSquare2">
-                <h1>User Info</h1>
-                <p>User Id: </p>
-                <p>NIC: </p>
-                <p>Email: </p>
-                <p>Mobile No: </p>
-            </div>
-            <div class="divSquare"
-                 id="divSquare3">
-                <h1>Driver Info</h1>
-                <p>Licence No: </p>
-                <p>Issue Date: </p>
-                <p>Expire Date: </p>
-                <p>Holder's Signature: </p>
-                <p>Vehicle Categories: </p>
-            </div>
-            <div class="divSquare"
-                 id="divSquare4">
-                <h1>Vehicle Info</h1>
-                <p>Register No: </p>
-                <p>Chassis No: </p>
-                <p>Current Owner Name: </p>
-                <p>Current Owner Address: </p>
-                <p>Engine No: </p>
-                <p>Vehicle Class: </p>
-                <p>State When Register: </p>
-                <p>Color: </p>
-                <p>Engine Capacity: </p>
-                <p>Fuel Type: </p>
-                <p>Year of Manufacture: </p>
-                <p>Previous Owners: </p>
-                <p>Current Owner Id: </p>
+        <div class="container">
+            <h1>User Profile</h1>
+            <div class="scroll">
+                <div class="divSquare"
+                     id="divSquare1"></div>
+                <div class="divSquare"
+                     id="divSquare2">
+                    <h2>User Info</h2>
+                    <p>User Id: </p>
+                    <p>NIC: </p>
+                    <p>Email: </p>
+                    <p>Mobile No: </p>
+                </div>
+                <div class="divSquare"
+                     id="divSquare3">
+                    <h2>Driver Info</h2>
+                    <p>Licence No: </p>
+                    <p>Issue Date: </p>
+                    <p>Expire Date: </p>
+                    <p>Holder's Signature: </p>
+                    <p>Vehicle Categories: </p>
+                </div>
+                <div class="divSquare"
+                     id="divSquare4">
+                    <h2>Vehicle Info</h2>
+                    <p>Register No: </p>
+                    <p>Chassis No: </p>
+                    <p>Current Owner Name: </p>
+                    <p>Current Owner Address: </p>
+                    <p>Engine No: </p>
+                    <p>Vehicle Class: </p>
+                    <p>State When Register: </p>
+                    <p>Color: </p>
+                    <p>Engine Capacity: </p>
+                    <p>Fuel Type: </p>
+                    <p>Year of Manufacture: </p>
+                    <p>Previous Owners: </p>
+                    <p>Current Owner Id: </p>
+                </div>
             </div>
         </div>
+
 
     </body>
 
