Complete profile with the picture

--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -62,8 +62,9 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <p class="profile-username">Avishi Ganepola</p>
-
+            <a href="../../user/profile/index.html">
+                <p class="profile-username">Avishi Ganepola</p>
+            </a>
         </div>
     </div>
     </div>
@@ -74,7 +75,15 @@
             <h1>User Profile</h1>
             <div class="scroll">
                 <div class="divSquare"
-                     id="divSquare1"></div>
+                     id="divSquare1">
+                    <div class="img-container">
+                        <img src="../../resources/images/Account.png"
+                             alt="Account">
+                        <div class="text">
+                            <p>G.A.A.D. GANEPOLA</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="divSquare"
                      id="divSquare2">
                     <h2>User Info</h2>
