Add id for fields in html file

--- a/user-side/user/fines/index.html
+++ b/user-side/user/fines/index.html
@@ -19,8 +19,7 @@
           type="image/x-icon"
           href="/resources/icons/favicon.ico">
     <script type="module"
-            src="./script.js"
-            ;></script>
+            src="./script.js"></script>
 
 </head>
 
