--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -19,8 +19,7 @@
           type="image/x-icon"
           href="/resources/icons/favicon.ico">
     <script type="module"
-            src="./script.js"
-            ;></script>
+            src="./script.js"></script>
 
 </head>
 
@@ -87,36 +86,36 @@
                 <div class="divSquare"
                      id="divSquare2">
                     <h2>User Info</h2>
-                    <p>User Id: </p>
-                    <p>NIC: </p>
-                    <p>Email: </p>
-                    <p>Mobile No: </p>
+                    <p id="user-id"></p>
+                    <p id="nic">NIC: </p>
+                    <p id="email">Email: </p>
+                    <p id="mobile-no">Mobile No: </p>
                 </div>
                 <div class="divSquare"
                      id="divSquare3">
                     <h2>Driver Info</h2>
-                    <p>Licence No: </p>
-                    <p>Issue Date: </p>
-                    <p>Expire Date: </p>
-                    <p>Holder's Signature: </p>
-                    <p>Vehicle Categories: </p>
+                    <p id="licence-no">Licence No: </p>
+                    <p id="issue-date">Licence Issue Date: </p>
+                    <p id="expire-date">Licence Expire Date: </p>
+                    <p id="signature">Holder's Signature: </p>
+                    <p id="vehicle-categories">Vehicle Categories: </p>
                 </div>
                 <div class="divSquare"
                      id="divSquare4">
                     <h2>Vehicle Info</h2>
-                    <p>Register No: </p>
-                    <p>Chassis No: </p>
-                    <p>Current Owner Name: </p>
-                    <p>Current Owner Address: </p>
-                    <p>Engine No: </p>
-                    <p>Vehicle Class: </p>
-                    <p>State When Register: </p>
-                    <p>Color: </p>
-                    <p>Engine Capacity: </p>
-                    <p>Fuel Type: </p>
-                    <p>Year of Manufacture: </p>
-                    <p>Previous Owners: </p>
-                    <p>Current Owner Id: </p>
+                    <p id="register-no">Register No: </p>
+                    <p id="Chassis-no">Chassis No: </p>
+                    <p id="c-owner-name">Current Owner Name: </p>
+                    <p id="c-owner-address">Current Owner Address: </p>
+                    <p id="engine-no">Engine No: </p>
+                    <p id="vehicle-class">Vehicle Class: </p>
+                    <p id="state">State When Register: </p>
+                    <p id="color">Color: </p>
+                    <p id="engine-capacity">Engine Capacity: </p>
+                    <p id="fuel-type">Fuel Type: </p>
+                    <p id="year-manufacture">Year of Manufacture: </p>
+                    <p id="previous-owners">Previous Owners: </p>
+                    <p id="current-owner-id">Current Owner Id: </p>
                 </div>
             </div>
         </div>
