--- a/user-side/user/fines/index.html
+++ b/user-side/user/fines/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
-          href="./main1.css">
+          href="./style.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
@@ -61,9 +61,9 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <div>
+            <a href="../profile/index.html">
                 <p class="profile-username">Avishi Ganepola</p>
-            </div>
+            </a>
         </div>
     </div>
     <!-- REPEATING -->
