--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -62,7 +62,7 @@
     <div class="dashboard-heading">
         <div class="panel">
             <a href="../../user/profile/index.html">
-                <p class="profile-username">Avishi Ganepola</p>
+                <p class="profile-username-nav">Avishi Ganepola</p>
             </a>
         </div>
     </div>
@@ -72,55 +72,37 @@
     <body>
         <div class="container">
             <h1>User Profile</h1>
-            <div class="scroll">
-                <div class="divSquare"
-                     id="divSquare1">
-                    <div class="img-container">
-                        <img src="../../resources/images/Account.png"
-                             alt="Account">
-                        <div class="text">
-                            <p>G.A.A.D. GANEPOLA</p>
+            <div class="scroll"
+                 id="profile-data-container">
+                <div class="profile-data-row">
+                    <div class="profile-data-card personal-info-card"
+                         id="personal-info-card">
+                        <div class="img-container">
+                            <img src="../../resources/images/Account.png"
+                                 alt="Account">
+                            <div class="profile-username"
+                                 id="profile-username">
+                            </div>
                         </div>
                     </div>
+                    <div class="profile-data-card"
+                         id="user-info-card">
+                        <h2>User Info</h2>
+                        <label id="user-id"></label>
+                    </div>
                 </div>
-                <div class="divSquare"
-                     id="divSquare2">
-                    <h2>User Info</h2>
-                    <p id="user-id"></p>
-                    <p id="nic">NIC: </p>
-                    <p id="email">Email: </p>
-                    <p id="mobile-no">Mobile No: </p>
-                </div>
-                <div class="divSquare"
-                     id="divSquare3">
-                    <h2>Driver Info</h2>
-                    <p id="licence-no">Licence No: </p>
-                    <p id="issue-date">Licence Issue Date: </p>
-                    <p id="expire-date">Licence Expire Date: </p>
-                    <p id="signature">Holder's Signature: </p>
-                    <p id="vehicle-categories">Vehicle Categories: </p>
-                </div>
-                <div class="divSquare"
-                     id="divSquare4">
-                    <h2>Vehicle Info</h2>
-                    <p id="register-no">Register No: </p>
-                    <p id="Chassis-no">Chassis No: </p>
-                    <p id="c-owner-name">Current Owner Name: </p>
-                    <p id="c-owner-address">Current Owner Address: </p>
-                    <p id="engine-no">Engine No: </p>
-                    <p id="vehicle-class">Vehicle Class: </p>
-                    <p id="state">State When Register: </p>
-                    <p id="color">Color: </p>
-                    <p id="engine-capacity">Engine Capacity: </p>
-                    <p id="fuel-type">Fuel Type: </p>
-                    <p id="year-manufacture">Year of Manufacture: </p>
-                    <p id="previous-owners">Previous Owners: </p>
-                    <p id="current-owner-id">Current Owner Id: </p>
+                <div class="profile-data-row">
+                    <div class="profile-data-card"
+                         id="driver-info-card">
+                        <h2>Driver Info</h2>
+                    </div>
+                    <div class="profile-data-card"
+                         id="vehicle-info-card">
+                        <h2>Vehicle Info</h2>
+                    </div>
                 </div>
             </div>
         </div>
-
-
     </body>
 
 </html>
