Made few changes in dashboard

--- a/user-side/dashboard/index.html
+++ b/user-side/dashboard/index.html
@@ -19,7 +19,7 @@
             type="image/x-icon"
             href="/resources/icons/favicon.ico">
       <script type="module"
-              src="#"></script>
+              src="./script.js"></script>
 
 </head>
 
@@ -80,32 +80,34 @@
             <div class="starter-stats">
                   <div class="blok">
                         <i class="fa fa-money"></i>
-                        <div class="noofpoints">
-                              <p>Total Points</p>
-                              <p>8</p>
+                        <div class="no">
+                              <p>Asset Types</p>
+                              <p>3</p>
                         </div>
                   </div>
 
                   <div class="blok">
                         <i class="fa fa-money kl"></i>
                         <div class="no">
-                              <p>Total Fines</p>
-                              <p>1</p>
+                              <p>Total Gains</p>
+                              <p>-100.01 BLONION</p>
                         </div>
                   </div>
 
                   <div class="blok">
                         <i class="fa fa-money pl"></i>
                         <div class="no">
-                              <p>Total Complaints</p>
-                              <p>2</p>
+                              <p>Longest HODL</p>
+                              <p>8 Months</p>
                         </div>
                   </div>
                   <div class="clear"></div>
                   <div class="gains">
                         <canvas id="myChart"></canvas>
                   </div>
+
             </div>
+
       </div>
 </body>
 
