--- a/user-side/user/login/index.html
+++ b/user-side/user/login/index.html
@@ -6,10 +6,10 @@
           content="IE=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet"
-          href="../resources/css/police/login.css"> -->
     <link rel="stylesheet"
           href="../../resources/css/login.css">
+    <link rel="stylesheet"
+          href="../../component/message/style.css">
     <!-- <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"> -->
     <title>NTSF</title>
