Add the link of message stylesheet in signup.html

--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -8,6 +8,8 @@
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
           href="../../resources/css/signup.css">
+    <link rel="stylesheet"
+          href="../../component/message/style.css">
     <!-- <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"> -->
     <title>NTSF</title>
