--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
-          href="../../resources/css/signup.css">
+          href="./style.css">
     <link rel="stylesheet"
           href="../../component/message/style.css">
     <!-- <link rel="stylesheet"
