Add fine no to complaint form

--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet"
           href="./style.css">
     <link rel="stylesheet"
+          href="../../../resources/css/form.css">
+    <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Source+Sans+Pro:300,600">
@@ -80,12 +82,12 @@
                       class="form"
                       oninput="validateComplaintForm()">
                     <div class="form-control">
-                        <!-- <label for="title">Fine No</label>
+                        <label for="title">Fine No</label>
                         <input type="text"
                                placeholder=""
                                id="fineNo" />
                         <i class="fas fa-check-circle"></i>
-                        <i class="fas fa-exclamation-circle"></i> -->
+                        <i class="fas fa-exclamation-circle"></i>
                         <label for="title">Title</label>
                         <input type="text"
                                placeholder=""
