--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -82,28 +82,23 @@
                       class="form"
                       oninput="validateComplaintForm()">
                     <div class="form-control">
+
                         <label for="title">Fine No</label>
                         <input type="text"
                                placeholder=""
                                id="fineNo" />
-                        <i class="fas fa-check-circle"></i>
-                        <i class="fas fa-exclamation-circle"></i>
+                        <!-- <i class="fas fa-check-circle"></i>
+                        <i class="fas fa-exclamation-circle"></i> -->
+
                         <label for="title">Title</label>
                         <input type="text"
                                placeholder=""
                                id="title" />
-                        <i class="fas fa-check-circle"></i>
-                        <i class="fas fa-exclamation-circle"></i>
 
-                    </div>
-                    <div class="form-control">
                         <label for="description">Description</label>
                         <input type="text"
                                placeholder=""
                                id="description" />
-                        <i class="fas fa-check-circle"></i>
-                        <i class="fas fa-exclamation-circle"></i>
-
                     </div>
                     <button id="submit-btn"
                             disabled
