--- a/user-side/dashboard/index.html
+++ b/user-side/dashboard/index.html
@@ -66,7 +66,7 @@
       <div class="dashboard-heading">
             <div class="panel">
                   <div>
-                        <p class="profile-username">Avishi Ganepola</p>
+                        <p class="profile-username">G.A.A.D. Ganepola</p>
                   </div>
             </div>
       </div>
