--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -62,7 +62,7 @@
     <div class="dashboard-heading">
         <div class="panel">
             <a href="../../user/profile/index.html">
-                <p class="profile-username-nav">Avishi Ganepola</p>
+                <p class="profile-username-nav">G.A.A.D. Ganepola</p>
             </a>
         </div>
     </div>
