--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -22,6 +22,7 @@
     <link rel="icon"
           type="image/x-icon"
           href="/resources/icons/favicon.ico">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module"
             src="./script.js"></script>
 
