--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -13,6 +13,7 @@
     <!-- <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"> -->
     <title>NTSF</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module"
             src="./script.js"></script>
 </head>
