Completion of add complaint functionality

--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -80,14 +80,13 @@
                 <div class="formHeader">
                     <h2>Add Complaint</h2>
                 </div>
-                <form action="#"
-                      id="form"
+                <form id="form"
                       class="form"
                       oninput="validateComplaintForm()"
                       onsubmit="addComplaint(); return false">
                     <div class="form-control">
 
-                        <label for="title">Fine No</label>
+                        <label for="fineNo">Fine No</label>
                         <input type="text"
                                placeholder=""
                                id="fineNo" />
