Change input type as password for input password

--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -56,7 +56,7 @@
                    placeholder="Mobile No"
                    autofocus />
             <i class="fa-solid fa-mobile-notch"></i>
-            <input type="text"
+            <input type="password"
                    id="password"
                    placeholder="Password"
                    autofocus />
