Add correct login path to sign up page

--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -65,8 +65,8 @@
                    id="re-password"
                    placeholder="Re Enter Password" />
             <i class="fa-solid fa-key"></i><br>
-            <!-- <a href="#">Forgot your password?</a><br><br> -->
-            Already have an account? <a href="">Login</a>
+            <a href="#">Forgot your password?</a><br><br>
+            Already have an account? <a href="../../user/login/index.html">Login</a>
             <button id="submit-btn"
                     disabled>
                 <i class="spinner"></i>
