Temporary fix in ntsf logo in login page

--- a/user-side/user/login/index.html
+++ b/user-side/user/login/index.html
@@ -20,9 +20,10 @@
 
 <body>
     <div class="header">
-        <div class="ntsflogo">
+        <div class="ntsflogoDiv">
             <img src="../../../resources/images/logo_NTSF.png"
-                 alt="ntsflogo">
+                 alt="ntsflogo"
+                 id="ntsflogo">
         </div>
         <div class="title">
             <h2>
