--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -107,9 +107,9 @@
                             disabled>
                         Submit
                     </button>
-                    <button id="cancel-button">
+                    <!-- <button id="cancel-button">
                         Cancel
-                    </button>
+                    </button> -->
                 </form>
             </div>
         </div>
