- Remove: Footage upload button from view complaint table - Add: As an input filed of add complaint form

--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -102,6 +102,11 @@
                         <input type="text"
                                placeholder=""
                                id="description" />
+
+                        <label for="footage">Footage Upload</label>
+                        <input type="file"
+                               id="myFile"
+                               name="filename">
                     </div>
                     <button id="submit-btn"
                             disabled>
