Add all correct relative paths to html files

--- a/user-side/dashboard/index.html
+++ b/user-side/dashboard/index.html
@@ -42,18 +42,18 @@
                         <button class="main">User Dashboard</button></a>
                   <div class="clear"></div> -->
                   <ul class="menu">
-                        <a href="./user/fines/index.html">
+                        <a href="../user/fines/index.html">
                               <i class="fa-solid fa-file-invoice"></i>
-                              View Fines
+                              Fine
                         </a>
                         </br>
-                        <a href="./user/complaint/add/index.html">
+                        <!-- <a href="./user/complaint/add/index.html">
                               <i class="fa-solid fa-plus"></i>
                               Add Complaint
-                        </a>
-                        <a href="./user/complaint/view/index.html">
+                        </a> -->
+                        <a href="../user/complaint/view/index.html">
                               <i class="fa-solid fa-layer-group"></i>
-                              View Complaints
+                              Complaint
                         </a>
                         <a href="./user/login/index.html">
                               <i class="fa-solid fa-right-from-bracket"></i>
@@ -65,9 +65,9 @@
       <!-- Dashboard heading -->
       <div class="dashboard-heading">
             <div class="panel">
-                  <div>
+                  <a href="../user/profile/index.html">
                         <p class="profile-username">G.A.A.D. Ganepola</p>
-                  </div>
+                  </a>
             </div>
       </div>
       <!-- REPEATING -->
