--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -21,7 +21,7 @@
     <title>Add Complaint</title>
     <link rel="icon"
           type="image/x-icon"
-          href="/resources/icons/favicon.ico">
+          href="../../../resources/icons/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module"
             src="./script.js"></script>
@@ -39,22 +39,22 @@
             <p class="logo"><b class="app-name">NTSF</b></p>
         </div>
         <p class="tagline">National Traffic Spot Fine System</p>
-        <a href="../../../dashboard/index.html">
+        <a href="/user-side/dashboard/index.html">
             <button class="main">User Dashboard</button></a>
         <div class="clear"></div>
         <ul class="menu">
             <a href="../../fines/index.html">
                 <i class="fa-solid fa-file-invoice"></i>
-                View Fines
+                Fine
             </a>
             </br>
-            <a href="../../complaint/add/index.html">
+            <!-- <a href="../../complaint/add/index.html">
                 <i class="fa-solid fa-plus"></i>
                 Add Complaint
-            </a>
+            </a> -->
             <a href="../../complaint/view/index.html">
                 <i class="fa-solid fa-layer-group"></i>
-                View Complaints
+                Complaint
             </a>
             <a href="../../login/index.html">
                 <i class="fa-solid fa-right-from-bracket"></i>
