Add favicon to missed two pages

--- a/user-side/dashboard/index.html
+++ b/user-side/dashboard/index.html
@@ -17,7 +17,7 @@
       <title>User Dashboard</title>
       <link rel="icon"
             type="image/x-icon"
-            href="/resources/icons/favicon.ico">
+            href="../resources/icons/favicon.ico">
       <script type="module"
               src="./script.js"></script>
 
