Create dashboard template

--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -24,7 +24,7 @@
           href="../../../resources/icons/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module"
-            src="./script-new.js"></script>
+            src="./script.js"></script>
 
 </head>
 
