--- a/user-side/dashboard/index.html
+++ b/user-side/dashboard/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet"
-            href="../resources/css/main.css">
+            href="./style.css">
       <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
       <link rel="stylesheet"
@@ -38,19 +38,12 @@
                   <button class="main">User Dashboard</button></a>
             <div class="clear"></div>
             <ul class="menu">
-                  <!-- <a href="./index.html">
-                        <button class="main">User Dashboard</button></a>
-                  <div class="clear"></div> -->
                   <ul class="menu">
                         <a href="../user/fines/index.html">
                               <i class="fa-solid fa-file-invoice"></i>
                               Fine
                         </a>
                         </br>
-                        <!-- <a href="./user/complaint/add/index.html">
-                              <i class="fa-solid fa-plus"></i>
-                              Add Complaint
-                        </a> -->
                         <a href="../user/complaint/view/index.html">
                               <i class="fa-solid fa-layer-group"></i>
                               Complaint
@@ -69,45 +62,41 @@
                         <p class="profile-username">G.A.A.D. Ganepola</p>
                   </a>
             </div>
-      </div>
-      <!-- REPEATING -->
 
-      <div class="container">
-            <h1>User Dashboard</h1>
-      </div>
+            <div class="all">
+                  <div class="container">
+                        <h1>User Dashboard</h1>
+                  </div>
+                  <div class="starter-stats">
+                        <div class="blok">
+                              <i class="fa fa-money"></i>
+                              <div class="no">
+                                    <p>Total Points</p>
+                                    <p>3</p>
+                              </div>
+                        </div>
 
-      <div class="all">
-            <div class="starter-stats">
-                  <div class="blok">
-                        <i class="fa fa-money"></i>
-                        <div class="no">
-                              <p>Total Points</p>
-                              <p>3</p>
+                        <div class="blok">
+                              <i class="fa fa-money kl"></i>
+                              <div class="no">
+                                    <p>Total Fines</p>
+                                    <p>5</p>
+                              </div>
+                        </div>
+
+                        <div class="blok">
+                              <i class="fa fa-money pl"></i>
+                              <div class="no">
+                                    <p>Total Complaints</p>
+                                    <p>4</p>
+                              </div>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="gains">
+                              <canvas id="myChart"></canvas>
                         </div>
                   </div>
-
-                  <div class="blok">
-                        <i class="fa fa-money kl"></i>
-                        <div class="no">
-                              <p>Total Fines</p>
-                              <p>5</p>
-                        </div>
-                  </div>
-
-                  <div class="blok">
-                        <i class="fa fa-money pl"></i>
-                        <div class="no">
-                              <p>Total Complaints</p>
-                              <p>4</p>
-                        </div>
-                  </div>
-                  <div class="clear"></div>
-                  <div class="gains">
-                        <canvas id="myChart"></canvas>
-                  </div>
-
             </div>
-
       </div>
 </body>
 
