--- a/user-side/dashboard/index.html
+++ b/user-side/dashboard/index.html
@@ -72,7 +72,7 @@
                               <i class="fa fa-money"></i>
                               <div class="no">
                                     <p>Total Points</p>
-                                    <p>3</p>
+                                    <p id="total-points">3</p>
                               </div>
                         </div>
 
@@ -80,7 +80,7 @@
                               <i class="fa fa-money kl"></i>
                               <div class="no">
                                     <p>Total Fines</p>
-                                    <p>5</p>
+                                    <p id="total-fines">5</p>
                               </div>
                         </div>
 
@@ -88,7 +88,7 @@
                               <i class="fa fa-money pl"></i>
                               <div class="no">
                                     <p>Total Complaints</p>
-                                    <p>4</p>
+                                    <p id="total-complaints">4</p>
                               </div>
                         </div>
                         <div class="clear"></div>
