--- a/user-side/user/fines/index.html
+++ b/user-side/user/fines/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet"
           href="./style.css">
     <link rel="stylesheet"
+          href="../../component/message/style.css">
+    <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Source+Sans+Pro:300,600">
