--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -24,7 +24,7 @@
           href="../../../resources/icons/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module"
-            src="./script.js"></script>
+            src="./script-new.js"></script>
 
 </head>
 
@@ -85,7 +85,8 @@
                       action="#"
                       method="post"
                       oninput="validateComplaintForm()"
-                      onsubmit="addComplaint(); return false">
+                      onsubmit="addComplaint(); return false"
+                      enctype='multipart/form-data'>
                     <div class="form-control">
 
                         <label for="fineNo">Fine No</label>
