Remove hardcoded profile-username from all pages replace them with session storage name

--- a/user-side/user/fines/index.html
+++ b/user-side/user/fines/index.html
@@ -64,7 +64,8 @@
     <div class="dashboard-heading">
         <div class="panel">
             <a href="../profile/index.html">
-                <p class="profile-username">G.A.A.D. Ganepola</p>
+                <p class="profile-username"
+                      id="profile-username"></p>
             </a>
         </div>
     </div>
