--- a/user-side/dashboard/index.html
+++ b/user-side/dashboard/index.html
@@ -59,7 +59,8 @@
       <div class="dashboard-heading">
             <div class="panel">
                   <a href="../user/profile/index.html">
-                        <p class="profile-username">G.A.A.D. Ganepola</p>
+                        <p class="profile-username"
+                           id="profile-username"></p>
                   </a>
             </div>
 
