--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -67,7 +67,8 @@
     <div class="dashboard-heading">
         <div class="panel">
             <a href="../../profile/index.html">
-                <p class="profile-username">G.A.A.D. Ganepola</p>
+                <p class="profile-username"
+                      id="profile-username"></p>
             </a>
         </div>
     </div>
