Add script of older version too

--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -25,6 +25,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module"
             src="./script-new.js"></script>
+    <!-- <script type="module"
+            src="./script.js"></script> -->
 
 </head>
 
@@ -68,7 +70,7 @@
         <div class="panel">
             <a href="../../profile/index.html">
                 <p class="profile-username"
-                      id="profile-username"></p>
+                   id="profile-username"></p>
             </a>
         </div>
     </div>
