Add profile picture to profile html file

--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -58,13 +58,20 @@
         </ul>
     </div>
 
+
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
             <a href="../../user/profile/index.html">
                 <p class="profile-username-nav"
-                      id="profile-username"></p>
+                   id="profile-username"></p>
             </a>
+            <div class="profile-picture-container">
+                <img src=""
+                     class="profile-picture"
+                     alt=""
+                     id="profile-picture">
+            </div>
         </div>
     </div>
     </div>
