--- a/user-side/user/login/index.html
+++ b/user-side/user/login/index.html
@@ -12,6 +12,8 @@
           href="../../component/message/style.css">
     <link rel="stylesheet"
           href="../../component/togglePassword/style.css">
+    <!-- <link rel="stylesheet"
+          href="../../component/smallMessage/form.css"> -->
     <!-- Link font-awesome for icons -->
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -56,7 +58,7 @@
                        placeholder="NIC"
                        autofocus />
                 <i class="fa fa-user"></i>
-                <!-- <small>Error message</small> -->
+                <small>Error message</small>
 
                 <div id="password-container">
                     <!-- Password -->
@@ -65,6 +67,7 @@
                            placeholder="Password"
                            autofocus />
                     <i class="fa fa-key"></i><br>
+                    <small>Error message</small>
 
                     <!-- Toggle Password -->
                     <span id="toggleEye"
