--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -62,17 +62,16 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <a href="../../user/profile/index.html">
-                <p class="profile-username-nav"
-                   id="profile-username"></p>
-            </a>
-            <div class="profile-picture-container">
-                <img src=""
-                     class="profile-picture"
-                     alt=""
-                     id="profile-picture">
+            <div>
+                <a href="../../user/profile/index.html">
+                    <p class="profile-username-nav"
+                       id="profile-username"></p>
+                </a>
             </div>
+            <div class="profile-picture-container"
+                 id="profile-picture-container"></div>
         </div>
+    </div>
     </div>
     </div>
     <!-- REPEATING -->
