search function added

--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -63,6 +63,7 @@
             </a>
             <div class="container">
                 <h1>Policeman Information</h1>
+                <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
                 <div class="tableSection">
                     <br>
                     <table class="rwd-table" id="table">
@@ -102,5 +103,6 @@
     </div>
     <script src="../../resources/js/police/username.js"></script>
     <script src="../../resources/js/police/igp/viewPoliceman.js"></script>
+    <script src="../../resources/js/police/search.js"></script>
 </body>
 </html>
